# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen-macos.sh  gen-win.bat
.github/workflows/: build.yml
configuration/: root_directory.h.in
include/learn_opengl/: camera.h  file_system.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
inlcude/learn_opengl/: file_system.h
resources/objects/tree/: trees9.mtl
src/0.hello_world/: CMakeLists.txt  hello_world.cpp
src/1.getting_started/1.1.hello_window/: CMakeLists.txt  hello_window.cpp
src/1.getting_started/1.2.hello_window_clear/: CMakeLists.txt  hello_window.cpp
src/1.getting_started/2.1.hello_triangle/: CMakeLists.txt  hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: CMakeLists.txt  hello_triangle_indexed.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: CMakeLists.txt  hello_triangle_exercise1.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: CMakeLists.txt  hello_triangle_exercise2.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: CMakeLists.txt  hello_triangle_exercise3.cpp
src/1.getting_started/3.1.shader_uniform/: CMakeLists.txt  shader_uniform.cpp
src/1.getting_started/3.1.shaders_uniform/: CMakeLists.txt  shader_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: CMakeLists.txt  shaders_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: CMakeLists.txt  shaders_class.cpp  shaders_class.vs
src/1.getting_started/3.4.shaders_exercise1/: CMakeLists.txt  shaders_exercise1.cpp  shaders_exercise1.fs  shaders_exercise1.vs
src/1.getting_started/3.5.shaders_exercise2/: CMakeLists.txt  shaders_exercise2.cpp  shaders_exercise2.fs  shaders_exercise2.vs
src/1.getting_started/3.6.shaders_exercise3/: CMakeLists.txt  shaders_exercise3.cpp  shaders_exercise3.fs
src/1.getting_started/4.1.textures/: CMakeLists.txt  textures.cpp  textures.fs
src/1.getting_started/4.2.textures_combined/: CMakeLists.txt  textures_combined.cpp
src/1.getting_started/4.3.textures_exercise1/: CMakeLists.txt  textures_exercise1.cpp  textures_exercise1.fs
src/1.getting_started/4.4.textures_exercise2/: CMakeLists.txt  textures_exercise2.cpp
src/1.getting_started/4.5.textures_exercise3/: CMakeLists.txt  textures_exercise3.cpp  textures_exercise3.fs
src/1.getting_started/4.6.textures_exercise4/: CMakeLists.txt  textures_exercise4.cpp  textures_exercise4.fs
src/1.getting_started/5.1.transformations/: CMakeLists.txt  transformations.cpp
src/1.getting_started/5.2.transformations_exercise1/: CMakeLists.txt  transformations_exercise1.cpp
src/1.getting_started/5.3.transformations_exercise2/: CMakeLists.txt  transformations_exercise2.cpp
src/1.getting_started/6.1.coordinate_systems/: CMakeLists.txt  coordinate_systems.cpp
src/1.getting_started/6.1.coordinate_systems_control/: CMakeLists.txt  coordinate_systems_control.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: CMakeLists.txt  coordinate_systems_depth.cpp  coordinate_systems_depth.fs
src/1.getting_started/6.3.coordinate_systems_multiple/: CMakeLists.txt  coordinate_systems_multiple.cpp  coordinate_systems_multiple.vs
src/1.getting_started/6.4.coordinate_systems_exercise/: CMakeLists.txt  coordinate_systems_exercise.cpp
src/1.getting_started/7.1.camera_circle/: CMakeLists.txt  camera_circle.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: CMakeLists.txt  camera_keyboard_dt.cpp
src/1.getting_started/7.2.camera_keyboard_dt_cursor/: CMakeLists.txt  camera_keyboard_dt_cursor.cpp
src/1.getting_started/7.3.camera_keyboard_zoom/: CMakeLists.txt  camera_keyboard_zoom.cpp
src/1.getting_started/7.4.camera_class/: CMakeLists.txt  camera_class.cpp
src/1.getting_started/7.5.camera_exercise1/: CMakeLists.txt  camera_class.h  camera_exercise1.cpp
src/1.getting_started/7.6.camera_exercise2/: CMakeLists.txt  camera_class.h  camera_exercise2.cpp
src/2.lighting/1.colors/: CMakeLists.txt  colors.cpp  colors.fs  colors.vs
src/2.lighting/2.1.basic_lighting_diffuse/: CMakeLists.txt  basic_lighting_diffuse.cpp  basic_lighting_diffuse.fs
src/2.lighting/2.2.basic_lighting_specular/: CMakeLists.txt  basic_lighting_specular.cpp
src/2.lighting/2.3.basic_lighting_practice1/: CMakeLists.txt  basic_lighting_practice1.cpp  basic_lighting_practice1.fs
src/2.lighting/2.4.basic_lighting_practice2/: CMakeLists.txt  basic_lighting_practice2.cpp  basic_lighting_practice2.fs
src/2.lighting/2.5.basic_lighting_practice3/: CMakeLists.txt  basic_lighting_practice3.cpp  basic_lighting_practice3.fs  basic_lighting_practice3.vs
src/2.lighting/2.6.basic_lighting_practice4/: CMakeLists.txt  basic_lighting_practice4.cpp  basic_lighting_practice4.fs  basic_lighting_practice4.vs
src/2.lighting/3.1.materials/: CMakeLists.txt  materials.cpp  materials.fs
src/2.lighting/3.2.materials_practice/: CMakeLists.txt  materials_practice.cpp  materials_practice.vs
src/2.lighting/4.1.light_map_diffuse/: CMakeLists.txt  light_map_diffuse.cpp  light_map_diffuse.fs
src/2.lighting/4.2.light_map_specular/: CMakeLists.txt  light_map_specular.cpp
src/2.lighting/4.3.light_map_practice2/: CMakeLists.txt  light_map_practice2.cpp  light_map_practice2.fs  light_map_practice2.vs
src/2.lighting/4.4.light_map_practice3/: CMakeLists.txt  light_cube.fs  light_map_practice3.cpp  light_map_practice3.fs
src/2.lighting/4.5.light_map_practice4/: CMakeLists.txt  light_map_practice4.cpp  light_map_practice4.fs
src/2.lighting/5.1.light_casters_directional/: CMakeLists.txt  light_casters_directional.cpp  light_casters_directional.fs
src/2.lighting/5.2.light_casters_point/: CMakeLists.txt  light_casters_point.cpp  light_casters_point.fs
src/2.lighting/5.3.light_casters_spot/: CMakeLists.txt  light_casters_spot.cpp  light_casters_spot.fs  light_cube.vs
src/2.lighting/5.4.light_casters_spot_soft/: CMakeLists.txt  light_casters_spot_soft.cpp  light_casters_spot_soft.fs
src/test_imgui/: CMakeLists.txt  imgui_test.cpp
src/test_root_dir/: CMakeLists.txt  root_dir_test.cpp
src/test_spdlog/: CMakeLists.txt  spdlog_test.cpp
(+50 files in other folders)
